# prime-switcher

./: .gitignore  install.sh  pyproject.toml
configs/nouveau-reverse-prime/: nouveau-xorg.conf
configs/nvidia-reverse-prime/: nvidia-xorg.conf
src/: __main__.py  gui.py  switchers.py  utils.py
