[tool.poetry]
name = "prime-switcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pycairo = "^1.20.0"
pygobject = "^3.38.0"

[tool.poetry.dev-dependencies]
PyGObject-stubs = "^0.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
